[package]
name = "oxydoc"
version = "0.1.0"
edition = "2024"
description = "Convert OpenAPI Specification to PDF"
license = "MIT"
authors = ["Zulfikharali Muzakir <zulfikharali@proton.me>"]
repository = "https://github.com/zulmuzakir/oxydoc"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.25.0"

[[bin]]
name = "oxydoc"
path = "src/main.rs"
